--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,6 +126,12 @@
     <string name="title_activity_new_main">NewMainActivity</string>
     <string name="title_dashboard">Product</string>
     <string name="title_notifications">More</string>
+    <string name="title_activity_stock_main">StockMainActivity</string>
+
+    <string name="tab_text_stock_1">Payment pending</string>
+    <string name="tab_text_stock_2">Processing</string>
+    <string name="tab_text_stock_3">Shipped</string>
+    <string name="tab_text_stock_4">Delivered</string>
 
 
 </resources>
